Fix the alignment of buttons to ensure better readability of main page

--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -41,7 +41,7 @@ html[xmlns] .slides {display: block;}
 /* FlexSlider Default Theme
 *********************************/
 .flexslider {overflow:hidden; position: relative; z-index:2;}
-.flexslider.top_slider {min-height:500px; background-color:#ccc;}
+.flexslider.top_slider {min-height:500px; background-color:#0;}
 .flexslider.top_slider:before {
 	content:'';
 	position:absolute;
@@ -50,7 +50,7 @@ html[xmlns] .slides {display: block;}
 	bottom:0;
 	width:100%;
 	height:80px;
-	background-image:url(../images/slider/slide_shadow.png);
+	/*background-image:url(../images/slider/slide_shadow.png); */
 	background-repeat:repeat-x;
 	background-size:auto 100%;
 	-webkit-background-size:auto 100%;
